force-app/main/default/objects/Egg_Cohort__c/Egg_Cohort__c.object-meta.xml
<CustomObject>
    <label>Egg Cohort</label>
    <nameField>
        <displayFormat>EC - {000000}</displayFormat>
        <label>Egg Cohort Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Egg Cohorts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>