force-app/main/default/objects/Egg_Cohort__c/fields/Batch_Freeze_Date__c.field-meta.xml
<CustomField>
    <fullName>Batch_Freeze_Date__c</fullName>
    <label>Batch Freeze Date</label>
    <summarizedField>Egg__c.Freeze_Date__c</summarizedField>
    <summaryForeignKey>Egg__c.Egg_Cohort__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>