force-app/main/default/objects/Egg_Cohort__c/fields/Collected_Date__c.field-meta.xml
<CustomField>
    <fullName>Collected_Date__c</fullName>
    <label>Collected Date</label>
    <type>Date</type>
</CustomField>