force-app/main/default/objects/Egg_Cohort__c/fields/Count_EZ__c.field-meta.xml
<CustomField>
    <fullName>Count_EZ__c</fullName>
    <label>Count EZ</label>
    <summaryFilterItems>
        <field>Egg__c.Grade__c</field>
        <operation>equals</operation>
        <value>EZ</value>
    </summaryFilterItems>
    <summaryForeignKey>Egg__c.Egg_Cohort__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>