force-app/main/default/objects/Egg_Cohort__c/fields/Count_MI__c.field-meta.xml
<CustomField>
    <fullName>Count_MI__c</fullName>
    <label>Count_MI</label>
    <summaryFilterItems>
        <field>Egg__c.Grade__c</field>
        <operation>equals</operation>
        <value>MI</value>
    </summaryFilterItems>
    <summaryForeignKey>Egg__c.Egg_Cohort__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>