force-app/main/default/objects/Egg_Cohort__c/fields/Eggs_Available_For_Insemination__c.field-meta.xml
<CustomField>
    <fullName>Eggs_Available_For_Insemination__c</fullName>
    <label>Eggs Available For Insemination</label>
    <summaryFilterItems>
        <field>Egg__c.Fate__c</field>
        <operation>notEqual</operation>
        <value>Discarded, Consumed, Frozen, Exported</value>
    </summaryFilterItems>
    <summaryForeignKey>Egg__c.Egg_Cohort__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>