force-app/main/default/objects/Egg_Cohort__c/fields/Eggs_Collected__c.field-meta.xml
<CustomField>
    <fullName>Eggs_Collected__c</fullName>
    <label>Eggs Collected</label>
    <summaryForeignKey>Egg__c.Egg_Cohort__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>