force-app/main/default/objects/Egg_Cohort__c/fields/Freeze_Media__c.field-meta.xml
<CustomField>
    <fullName>Freeze_Media__c</fullName>
    <label>Freeze Media</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vitrolife</fullName>
            </value>
            <value>
                <fullName>Sage</fullName>
            </value>
            <value>
                <fullName>Cook</fullName>
            </value>
            <value>
                <fullName>In-House</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>