force-app/main/default/objects/Egg_Cohort__c/fields/Freeze_Scientist__c.field-meta.xml
<CustomField>
    <fullName>Freeze_Scientist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Freeze Scientist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Egg_Cohorts1</relationshipName>
    <type>Lookup</type>
</CustomField>