force-app/main/default/objects/Egg_Cohort__c/fields/Imported_From__c.field-meta.xml
<CustomField>
    <fullName>Imported_From__c</fullName>
    <label>Imported From?</label>
    <length>250</length>
    <type>Text</type>
</CustomField>