force-app/main/default/objects/Egg_Cohort__c/fields/Original_Storage_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Original_Storage_Expiry__c</fullName>
    <formula>DATE(
  YEAR( Batch_Freeze_Date__c ) + 10,
  MONTH(Batch_Freeze_Date__c ),
  DAY(Batch_Freeze_Date__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Storage Expiry Date</label>
    <type>Date</type>
</CustomField>