force-app/main/default/objects/Egg_Cohort__c/fields/Patient_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Patient_Date_of_Birth__c</fullName>
    <formula>Patient_Donor__r.Birthdate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Date of Birth</label>
    <type>Date</type>
</CustomField>