force-app/main/default/objects/Egg_Cohort__c/fields/Patient_Donor__c.field-meta.xml
<CustomField>
    <fullName>Patient_Donor__c</fullName>
    <label>Patient / Donor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Egg Cohorts</relationshipLabel>
    <relationshipName>Egg_Cohorts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>