force-app/main/default/objects/Egg_Cohort__c/fields/Reserved_For__c.field-meta.xml
<CustomField>
    <fullName>Reserved_For__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reserved For</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Egg Cohorts</relationshipLabel>
    <relationshipName>Egg_Cohorts</relationshipName>
    <type>Lookup</type>
</CustomField>