force-app/main/default/objects/Egg_Cohort__c/fields/Storage_Location__c.field-meta.xml
<CustomField>
    <fullName>Storage_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Storage Location</label>
    <referenceTo>Storage_Location__c</referenceTo>
    <relationshipLabel>Egg Cohorts</relationshipLabel>
    <relationshipName>Egg_Cohorts</relationshipName>
    <type>Lookup</type>
</CustomField>