force-app/main/default/objects/Egg_Cohort__c/fields/Total_Collected__c.field-meta.xml
<CustomField>
    <fullName>Total_Collected__c</fullName>
    <label>Total Collected</label>
    <summaryFilterItems>
        <field>Egg__c.Grade__c</field>
        <operation>notEqual</operation>
        <value>No Oocyte</value>
    </summaryFilterItems>
    <summaryForeignKey>Egg__c.Egg_Cohort__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>